// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly 1`] = `
<div
  className="table__label table__label_role_counter"
  onClick={[Function]}
>
  0h 00m 00s
</div>
`;

exports[`Renders correctly 2`] = `
<div
  className="table__label table__label_role_counter"
  onClick={[Function]}
>
  0m
</div>
`;
